--- a/README.html
+++ b/README.html
@@ -1,1 +1,7 @@
-<html><body bgcolor="red">SVCE</body></html>
+<html><body bgcolor="red"><h1 align="center" style="color:orange;background:blue;">SVCE</h1>
+  <form name="form" action="today.php" method="POST"><input type="button" name="next" value="next" onclick="return fun()" />
+  <script>
+    function fun(){
+    window.location.href("today.php");
+    }
+    </script></form></body></html>
