--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 
 <html><body bgcolor="red"><h1 align="center" style="color:orange;background:blue;">SVCE</h1>
   <form name="form" action="today.php" method="POST">
-    <?php <input type="button" name="next" value="next" onclick="return fun()" /> 
+     <input type="button" name="next" value="next" onclick="return fun()" /> 
   <script>
     function fun(){
     window.location.href("today.php");
     }
     </script></form></body></html>
+<?php 
+echo 'arjun';
+?>
