Update and rename about.php to about.html

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@ background:green;
 
 <script>
 function fun(){
-window.location.href("today.php");
+window.location.href("index.html");
 }
 </script>
 </form>
