--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@ transition:0.6s;
 </head>
 <body>
 <div class="topnav"><ul>
-  <li><a class="active" href="today.php">SVCE  Home</a></li>
- <li> <a href="about.php">About Us</a></li>
-  <li><a href="rank.php">Rankings of SVCE</a></li>
-  <li><a href="institutions.php">Institutions </a></li>
-<li><a href="regi.php">Registration Student</a></li>
-<li><a href="login.php">Feedback</a></li>
-<li><a href="Ambitions.php">Ambitions&&Goals</a></li>
-<li><a href="admin.php">Admissions</a></li>
-<li><a href="dep.php">Departments</a></li>
-<li><a href="staff.php">Staff</a></li>
+  <li><a class="active" href="index.html">SVCE  Home</a></li>
+ <li> <a href="about.html">About Us</a></li>
+  <li><a href="rank.html">Rankings of SVCE</a></li>
+  <li><a href="institutions.html">Institutions </a></li>
+<li><a href="regi.html">Registration Student</a></li>
+<li><a href="login.html">Feedback</a></li>
+<li><a href="Ambitions.html">Ambitions&&Goals</a></li>
+<li><a href="admin.html">Admissions</a></li>
+<li><a href="dep.html">Departments</a></li>
+<li><a href="staff.html">Staff</a></li>
 </ul>
 </div>
 <p style="background:gray;">.....................................................................................................                             
