Update and rename admin.php to admin.html

--- a/admin.html
+++ b/admin.html
@@ -17,6 +17,6 @@ please see www.apicet.nic.in</p>
 <center><input type="button" name="close" value="Home" onclick="fun()"></center>
 <script>
 function fun(){
-window.location.href("today.php");
+window.location.href("index.html");
 }</script></form></body>
 </html>
