Update and rename dep.php to dep.html

--- a/dep.html
+++ b/dep.html
@@ -25,7 +25,7 @@ background:aqua;
 <center><input type="button" name="close" value="Home" onclick="fun()"></center>
 <script>
 function fun(){
-window.location.href("today.php");
+window.location.href("index.html");
 }</script></form>
 </body>
 </html>
