Update and rename institutions.php to institutions.html

--- a/institutions.html
+++ b/institutions.html
@@ -48,6 +48,6 @@ MBA, HKUST, Hong Kong
 Industry Relations & Initiatives</h3><center><input type="button" name="Home" value="Home" onclick="fun()"></center>
 <script>
 function fun(){
-window.location.href("today.php");
+window.location.href("index.html");
 }</script></form></body>
 </html>
