Update and rename rank.php to rank.html

--- a/rank.html
+++ b/rank.html
@@ -4,13 +4,13 @@ background:yellow;
 color:green;
 }
 </style></head><body style="background:gray;"><form action="first.php" method="POST">
-<p style="color:black;">iSpark program by INFOSYS Technologies – 300 students visited Infosys Hyderabad campus understanding the real world industry expectations.
+<p style="color:black;">iSpark program by INFOSYS Technologies â€“ 300 students visited Infosys Hyderabad campus understanding the real world industry expectations.
 MOU with ORACLE ACADEMY to offer Advanced Computer Science courses on campus.
 Research and Mobile Applications Development Lab (RMD LAB) initiative in association with CSI - Computer Society of India.
 MOU with Deskstream Technologies, Hyderabad to collaborate on cloud computing.
 Established Incubation center in association with JKC to encourage Entrepreneurship. 
 MOU with Monster India & Manipal group iRize for assessment & placements.
-MOU with EnhanceEdu – An initiative in collaboration with IIIT Hyderabad to improve teaching methodologies through effective usage of technology. 
+MOU with EnhanceEdu â€“ An initiative in collaboration with IIIT Hyderabad to improve teaching methodologies through effective usage of technology. 
 </p>
  <h1 align="center" style="color:green;">
 Rankings & Achievements
@@ -20,13 +20,13 @@ Ranked among the top premier Engineering colleges in Andhra Pradesh.
 SVC student secured All India top ranks in GATE and other competitive exams.
 Our students among Top 10, in JNTUA Examinations.
 Our students achieved many awards and prizes in National Level Technical contests conducted by various premier institutions like SVU, VIT, JNTUH, JNTUA and other Universities.
-SVC engineering students have developed an Online campus radio – svcollegesradio.info, which has acclaimed great buzz not only in the campus but also other engineering colleges in the state. 
+SVC engineering students have developed an Online campus radio â€“ svcollegesradio.info, which has acclaimed great buzz not only in the campus but also other engineering colleges in the state. 
 The students are motivated and encouraged right from their first year, to take up suitable and simple projects of any nature and dimension. This is intended to inculcate in them, a creative bent of mind, a scientific temper and knowledge of procedures and practices, with a view to eventually molding them into thinking as well as practical engineers. The projects may be individual or group exercises. Ample opportunities are available to the students to avail themselves of extra class and lab facilities for self-improvement through sharpening of their communication and soft skills. 
 </p>
 <center><input type="button" name="close" value="Home" onclick="fun()"></center>
 <script>
 function fun(){
-window.location.href("today.php");
+window.location.href("index.html");
 }</script></form>
 </body>
 </html>
