Update and rename regi.php to regi.html

--- a/regi.html
+++ b/regi.html
@@ -135,7 +135,7 @@ cellspacing="1" style="border:2px dotted red;">
 <center><input type="button" name="close" value="Home" onclick="fun()"></center>
 <script>
 function fun(){
-window.location.href("today.php");
+window.location.href("index.html");
 }</script>
     </form>         
 
