--- a/regi.html
+++ b/regi.html
@@ -35,7 +35,7 @@ color:yellow;
    </head>
    
    <body bgcolor="aqua" font-color="red"> 
-<form action="vij.php" method="POST">
+<form action="vij.html" method="POST">
 <h1 align="center" style="color:dodgerblue;background:red;">SVCE-2019</h1>
 <table cellpadding="2" width="5%" height="60" align="center" style="background:gray;" id="main"
 cellspacing="1" style="border:2px dotted red;">
