--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <?php
-include "arjun.php";
+include "arjun.html";
 ?>
 <!DOCTYPE html>
 <html>
@@ -21,7 +21,7 @@ color:yellow;
 </style>
 </head>
 <body bgcolor="gold">
-<form   action="tweet.php" method = "POST">
+<form   action="tweet.html" method = "POST">
 <h1 align="center" style="color:red;background:dodgerblue;">SVCE-MCA</h1>
 <table cellpadding="2" width="10%"  align="center" background="gold" id="main"
 cellspacing="2" style="border:2px dotted red;">
@@ -51,7 +51,7 @@ size="30"></td>
 <center><input type="button" name="close" value="Home" onclick="fun()"></center>
 <script>
 function fun(){
-window.location.href("today.php");
+window.location.href("index.html");
 }</script> 
 </body>
 </html>
