Update and rename rama.php to rama.html

--- a/rama.html
+++ b/rama.html
@@ -23,24 +23,24 @@ background:blue;
 <body style="background:aqua;">
 <h1 align="center" style="fontsize:20;color:gold;">SVCE-MCA-2019</h1>
 <table align="left" style="background:slateblue;" name="main"><tr><td class="a"><a href="firsta.php" >MCA-FIRST-SECTION-A-2019</a></td></tr>
-<tr><td style="fontsize:10;" class="b"><i><a href="firstb.php" >MCA-FIRST-SECTION-B-2019</a></i></td></tr>
-<tr><td style="fontsize:10;" class="c"><a href="seconda.php" >MCA-SECOND-SECTION-A-2019</a></td></tr>
-<tr><td style="fontsize:10;" class="d"><i><a href="secondb.php" >MCA-SECOND-SECTION-B-2019</a></i></td></tr>
-<tr><td style="fontsize:10;" class="e"><a href="thirda.php" >MCA-THIRD-SECTION-A-2019</a></td></tr>
-<tr><td style="fontsize:10;" class="f"><i><a href="thirdb.php" >MCA-THIRD-SECTION-B-2019</a></i></td></tr>
+<tr><td style="fontsize:10;" class="b"><i><a href="firstb.html" >MCA-FIRST-SECTION-B-2019</a></i></td></tr>
+<tr><td style="fontsize:10;" class="c"><a href="seconda.html" >MCA-SECOND-SECTION-A-2019</a></td></tr>
+<tr><td style="fontsize:10;" class="d"><i><a href="secondb.html" >MCA-SECOND-SECTION-B-2019</a></i></td></tr>
+<tr><td style="fontsize:10;" class="e"><a href="thirda.html" >MCA-THIRD-SECTION-A-2019</a></td></tr>
+<tr><td style="fontsize:10;" class="f"><i><a href="thirdb.html" >MCA-THIRD-SECTION-B-2019</a></i></td></tr>
 </table><h1 align="center" style="color:gold;">FEEDBACK FOR FACULTY</h1>
-<p style="color:black;">iSpark program by INFOSYS Technologies – 300 students visited Infosys Hyderabad campus understanding the real world industry expectations.
+<p style="color:black;">iSpark program by INFOSYS Technologies â€“ 300 students visited Infosys Hyderabad campus understanding the real world industry expectations.
 MOU with ORACLE ACADEMY to offer Advanced Computer Science courses on campus.
 Research and Mobile Applications Development Lab (RMD LAB) initiative in association with CSI - Computer Society of India.
 MOU with Deskstream Technologies, Hyderabad to collaborate on cloud computing.
 Established Incubation center in association with JKC to encourage Entrepreneurship. 
 MOU with Monster India & Manipal group iRize for assessment & placements.
-MOU with EnhanceEdu – An initiative in collaboration with IIIT Hyderabad to improve teaching methodologies through effective usage of technology. 
+MOU with EnhanceEdu â€“ An initiative in collaboration with IIIT Hyderabad to improve teaching methodologies through effective usage of technology. 
 </p>
 <center><input type="button" name="close" value="Home" onclick="fun()"></center>
 <script>
 function fun(){
-window.location.href("today.php");
+window.location.href("index.html");
 }</script>
 </body>
 </html>
